Fix colors on dark mode

--- a/src/assets/css/source.css
+++ b/src/assets/css/source.css
@@ -2,9 +2,14 @@
 
 :root {
     --black: 13, 43, 69; /* #0d2b45 */
-    /* --white: 255, 236, 214; /* #ffecd6 */
-    --white: 250, 250, 250;
+    --white: 250, 250, 250; /* #ffffff */
     --vibrant: 255, 170, 94; /* #ffaa5e */
+}
+
+@media (prefers-color-scheme: dark) {
+    :root {
+        --white: 255, 236, 214; /* #ffecd6 */
+    }
 }
 
 @tailwind base;
